# saikuda

./: .gitignore  .gitpod.yml  README.md  TODO  _blessed.py  _colorama.py  _inquirer.py  armor.py  attack.py  battle.py  creature.py  fightable.py  item.py  main.py  player.py  pyproject.toml  room.py  save.py  setup.sh  update.sh  util_io.py  weapon.py
ai_engines/: randomize.py  three_ahead.py
enemies/mountain/: emperorpinko.py  pinko.py
rooms/mountain/: penguin1.py  penguin2.py  penguin3.py  puzzle1.py  puzzle2.py  puzzle3.py  puzzle4.py  ravine1.py  shop1.py  start.py
